--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,20 @@
 Release Notes
 =============
 
+0.4.2
+=====
+
+This update just brings documentation to the release tarball.
+
+
+Other Notes
+-----------
+
+- Add API docs for :mod:`pubmarine`
+
+- Add an example that walks through creating a simplified clone of UNIX talk using :mod:`asyncio` and :mod:`pubmarine`
+
+
 0.4.1
 =====
 
